# python-jam-2021-2

./: .pre-commit-config.yaml  README.md  Template-README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
aBox/: __init__.py  __main__.py  custom_parser.py  display.py  game_movement.py  game_test.py  input_box.py  interpreter.py  level_maker.py  level_state.py  levels.py  loader.py  parser.py  perams.py  perams_dumper.py  screen.py  test.py  tiles.py  utils.py
aBox/microUtilities/: __init__.py  mainMenu.py
bob_box/: __main__.py  char_converter.py  editor.py  game_movement.py  game_test.py  input_box.py  interpreter.py  level_data.py  level_maker.py  level_state.py  objects.json  parser_classes.py  perams.py  run_levels.py  tiles.py  utils.py
src/: main.py
