[tool.poetry]
name = "python-jam-2021"
version = "0.1.0"
description = ""
authors = ["dain"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.1"
blessed = "^1.18.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.2"
pre-commit = "^2.13.0"
flake8-annotations = "^2.6.2"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
pytest = "^6.2.4"
rich = "^10.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
